# Polymarket-Sports-Arbitrage-Bot

./: .env  .gitignore  README.md  env.example  pyproject.toml
data/: arbitrage_comparison.csv  arbitrage_comparison.json  arbitrage_data_filtered.csv  combined_strategy_results.json  directional_arbitrage.json  max_delta_by_sportsbook.json
data/sportsbook_data/events/: americanfootball_ncaaf.json  americanfootball_nfl.json  basketball_nba.json  basketball_ncaab.json  cricket_odi.json  icehockey_nhl.json  mma_mixed_martial_arts.json  soccer_argentina_primera_division.json  soccer_brazil_campeonato.json  soccer_epl.json
data/sportsbook_data/odds/: americanfootball_ncaaf.json  americanfootball_nfl.json  basketball_nba.json  basketball_ncaab.json  cricket_odi.json  icehockey_nhl.json  mma_mixed_martial_arts.json  soccer_argentina_primera_division.json
docs/: ML_STRATEGY.md
models/: strategy_model.json
poly_sports/data_fetching/: fetch_odds_comparison.py  fetch_sports_markets.py
poly_sports/ml/: __init__.py  features.py  strategy_model.py
poly_sports/utils/: __init__.py  logger.py  pk_validation.py  wrapper.py
scripts/: monitor_pnl.py  run_arbitrage_detection.py  run_combined_strategy.py  run_max_delta_analysis.py  train_strategy_model.py
tests/: test_integration.py  test_pk_validation.py
